WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183963
[Extra zoom mode] Fix some localizable strings after
r229878
https://bugs.webkit.org/show_bug.cgi?id=183963
Summary
[Extra zoom mode] Fix some localizable strings after r229878
Wenson Hsieh
Reported
2018-03-23 16:39:41 PDT
Some localized strings pertaining to extra zoom mode need to be fixed, due to incorrect usage of the WEB_UI_STRING macro in
r227646
.
Attachments
Patch
(5.86 KB, patch)
2018-03-23 16:54 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-03-23 16:54:16 PDT
Created
attachment 336441
[details]
Patch
WebKit Commit Bot
Comment 2
2018-03-23 17:33:57 PDT
Comment on
attachment 336441
[details]
Patch Clearing flags on attachment: 336441 Committed
r229939
: <
https://trac.webkit.org/changeset/229939
>
WebKit Commit Bot
Comment 3
2018-03-23 17:33:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-03-23 17:34:18 PDT
<
rdar://problem/38814186
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug