[Extra zoom mode] Fix some localizable strings after r229878 https://bugs.webkit.org/show_bug.cgi?id=183963

Reviewed by Tim Horton.

The WEB_UI_STRING macro was incorrectly used for certain localized strings pertaining to extra zoom mode. To
correct this, make the "Done" string use WEB_UI_STRING with actual UI-facing text; since day, year and month
labels in the date picker are less generalizable to other UI, leave these as unique keys, but change them to
use WEB_UI_STRING_KEY instead.

Additionally, remove now-unused localizable strings for the text input view controller.

* English.lproj/Localizable.strings:
* platform/LocalizedStrings.cpp:
(WebCore::formControlDoneButtonTitle):
(WebCore::datePickerDayLabelTitle):
(WebCore::datePickerMonthLabelTitle):
(WebCore::datePickerYearLabelTitle):


Canonical link: https://commits.webkit.org/199571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229939 268f45cc-cd09-0410-ab3c-d52691b4dbfc