Source/WebCore/platform/LocalizedStrings.h
@@ -322,8 +322,6 @@ namespace WebCore {
     WEBCORE_EXPORT String formControlHideButtonTitle();
     WEBCORE_EXPORT String formControlGoButtonTitle();
     WEBCORE_EXPORT String formControlSearchButtonTitle();
-    WEBCORE_EXPORT String textInputModeWriteButtonTitle();
-    WEBCORE_EXPORT String textInputModeSpeechButtonTitle();
     WEBCORE_EXPORT String datePickerDayLabelTitle();
     WEBCORE_EXPORT String datePickerMonthLabelTitle();
     WEBCORE_EXPORT String datePickerYearLabelTitle();
